# sports-ai-v0-2.o

./: .env  .env.example  .gitignore  DEVELOPMENT.md  README.md  SETUP.md  TODO.md  dev.sh  pyproject.toml  run.py
api/: __init__.py  analysis.py  app.py  auth.py  config.py  db.py  models.py  routes_auth.py  routes_coach.py  routes_video.py
app/: globals.css  layout.tsx  page.tsx
app/(dashboard)/: layout.tsx
app/(dashboard)/dashboard/: page.tsx
app/(dashboard)/dashboard/analytics/: page.tsx
app/(dashboard)/dashboard/profile/: page.tsx
app/api/auth/login/: route.ts
app/api/auth/register/: route.ts
app/api/videos/[id]/analyze/: route.ts
app/api/videos/results/[id]/: route.ts
app/api/videos/upload/: route.ts
app/api/videos/user-videos/: route.ts
app/coach/dashboard/: layout.tsx  page.tsx
app/coach/dashboard/analytics/: page.tsx
app/coach/dashboard/compare/: page.tsx
app/coach/dashboard/feedback/: page.tsx
app/coach/dashboard/leaderboard/: page.tsx
app/coach/dashboard/players/: page.tsx
app/coach/dashboard/players/[userId]/: page.tsx
app/dashboard/: page.tsx
app/login/: page.tsx
app/register/: page.tsx
app/results/[id]/: page.tsx
components/: header.tsx  video-upload-form.tsx
components/ui/: card.tsx
lib/: auth-context.tsx  protected-route.tsx
